Fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #login-container {
-  height: 340px;
+  height: 400px;
   width: 320px;
   border-radius: 8px;
   background: #ffffff;
